Build tools: pass --sun-misc-unsafe-memory-access=allow on JDK24+